<resources>
    <string name="app_name">Performance Tracker</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string-array name="usertype">
        <item>Admin</item>
        <item>Manager</item>
        <item>User</item>
    </string-array>
    <string-array name="check_Status">
        <item>Connected</item>
        <item>Not Connected</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Don\'t have an account? Sign up</string>
    <string name="please_select">Please select</string>
    <string name="login_here">Login Here</string>
    <string name="profile">Welcome to Fragment Activity</string>
    <string name="click_me">Click Me</string>
    <string name="home">Home Fragment</string>
    <string name="managers_and_admins">Manage Managers and Admins</string>
    <string name="reportees">Manage Reportees</string>
    <string name="fragment">Welcome to Fragment Activity</string>
    <string name="manage_users">Manage Users</string>
    <string name="task_list">Task List</string>
    <string name="task">Assigned Task</string>
    <string name="home1">Home</string>
    <string name="reports">Reports</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="Registration">Register</string>
    <string name="select_lead">Select Lead</string>
    <string name="select_users">Select Users</string>
    <string name="select_lead_status">Select Lead Status</string>
    <string name="create_lead">Create Lead</string>
    <string name="import_lead">Import Lead</string>
    <string name="manage_user">Manage Users</string>
    <string name="user_list">User List</string>
    <string name="edit_details">Edit Details</string>
    <string name="add_user">Add User</string>
    <string name="delete_user">Delete User</string>
    <string name="edit_user">Edit User</string>
    <string name="delete_task">Delete Task</string>
    <string name="add_task">Add Task</string>
    <string name="view_task">View Task</string>
    <string name="manage_tasks">Manage Tasks</string>
    <string name="assign_new_task">Assign New Task</string>
    <string name="update_task">Update Task</string>
    <string name="manager_tasks">Manager Tasks</string>
    <string name="delete_manager">Delete Manager</string>
    <string name="add_manager">Add Manager</string>
    <string name="user_profile">User Profile</string>
    <string name="name">Name:</string>
    <string name="work_done">Work done...</string>
    <string name="report">Report:</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="status">Status</string>
    <string name="SMTP">SMTP</string>
    <string name="role">Role</string>
    <string name="task_description">Task Description</string>
    <string name="description">Description:</string>
    <string name="task_to_be_assigned">Task to be assigned...</string>
    <string name="taskname">Task:</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>