<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/manage_user"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <ImageView
        android:id="@+id/users_list"
        android:layout_width="135dp"
        android:layout_height="101dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="240dp"
        app:layout_constraintBottom_toTopOf="@+id/list_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/users" />

    <Button
        android:id="@+id/list_users"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="308dp"
        android:text="@string/user_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/users_edit"
        android:layout_width="135dp"
        android:layout_height="101dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/list_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/edit_user" />

    <Button
        android:id="@+id/edit_users"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/edit_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/users_add"
        android:layout_width="135dp"
        android:layout_height="101dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toStartOf="@+id/user_delete"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_users"
        app:srcCompat="@drawable/add_user" />

    <Button
        android:id="@+id/add_users"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:text="@string/add_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/user_delete"
        android:layout_width="135dp"
        android:layout_height="101dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/users_add"
        app:layout_constraintTop_toBottomOf="@+id/edit_users"
        app:srcCompat="@drawable/delete" />

    <Button
        android:id="@+id/delete_users"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="484dp"
        android:text="@string/delete_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>